<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <digimagus.csrmesh.view.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:paddingLeft="16dp"
        android:background="@drawable/shape_bottom"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textColor="@drawable/change_color"
            app:layout_textSizePercent="40%" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/save"
            android:textColor="@drawable/change_color"
            app:layout_textSizePercent="40%" />
    </digimagus.csrmesh.view.PercentRelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="Location"
        android:textSize="20sp" />

    <digimagus.csrmesh.view.EditTextWithDel
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:imeOptions="actionDone"
        android:imeActionLabel="@string/done"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="10dp"
        android:text="Hong Kong, HK"
        android:textSize="16sp" />

</LinearLayout>